# documentation

./: .gitignore  404.html  CNAME  Changelog.md  LICENSE  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  run.dev.sh  versions.json
.github/workflows/: build-docker-image.yaml  build-publish-image.yaml  ci.yml  deploy-docs-version.yml  deploy.yml  publish-to-dockerhub.yml  publish-to-ghcr.yml  static.yml  version-bump.yml
2.0/: 404.html  index.html  sitemap.xml
2.0/admin/: index.html
2.0/dev/: index.html
2.0/search/: search_index.json
2.1/: 404.html  index.html  sitemap.xml
3.0/: 404.html  index.html  sitemap.xml
3.0-dev/: 404.html  index.html  sitemap.xml
3.1/: 404.html  index.html  sitemap.xml
3.1dev/: 404.html  index.html  sitemap.xml
3.2/: 404.html  index.html  sitemap.xml
3.3/: 404.html  index.html  sitemap.xml
3.4/: 404.html  index.html  sitemap.xml
3.5/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html
docker/: Dockerfile  Dockerfile.dev  certs.sh  nginx.conf
docs/: backup-restore.md  changelog.md  glossary.md  index.md  pmdump.md  roadmap.md  troubleshooting.md  whatsnew.md
getting-started/: index.html
initial-docs/: mkdocs.yml
latest/: 404.html  index.html
overrides/: main.html
requirements/: base.txt
search/: search_index.json
settings/: index.html
site/: 404.html  index.html  sitemap.xml
source/: conf.py  index.rst
src/: changelog.rst  conf.py  glossary.rst  index.rst  roadmap.rst  troubleshooting.rst
v2.1/: 404.html  index.html  sitemap.xml
v3.5/: 404.html  index.html  sitemap.xml
(+836 files in other folders)
