[tool.poetry]
name = "documentation"
version = "1.5.8"
description = "Papermerge Documentation"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.3"
mike = "^1.1.2"
mkdocs-macros-plugin = "^1.0.4"
setuptools = "^69.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
