[tool.poetry]
name = "documentation"
version = "1.6"
description = "Papermerge Documentation"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mike = "^2.1"
mkdocs-macros-plugin = "^1.3"
setuptools = "^69.0.2"
taskipy = "^1.14.1"


[tool.taskipy.tasks]
server = "mkdocs serve"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
